# minic-compiler

./: CMakeLists.txt  Makefile  ast.c  ast.h  ir.c  ir.h  main.c  minic.rar  minic_lex.c  minic_lex.h  minic_lex.l  minic_yacc.c  minic_yacc.h  minic_yacc.y  table.c  table.h  util.c  util.h
